--- a/src/component/home/home_head/home_head.css
+++ b/src/component/home/home_head/home_head.css
@@ -66,7 +66,22 @@
     color: #fff;
     height: 55px;
     
+    opacity: 0; /* Initially hidden */
+    animation: slideUp 1s ease-out 0.5s forwards; /* Animation applied */
   }
+
+  @keyframes slideUp {
+    0% {
+      transform: translateY(100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  
   
   .btn:hover {
     background-color: #fb9701;
@@ -80,8 +95,6 @@
   
     .content p {
       font-size: 0.9rem;
-    }
- 
-  
-  }
+    }  
+}
   
