--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -51,29 +51,28 @@
   }
   
   /* Responsive styles */
-  @media (max-width: 768px) {
-    .menu-icon {
-      display: block;
-    }
-  
-    .nav-links {
-      flex-direction: column;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      background-color: #fff;
-      width: 100%;
-      height: 0;
-      overflow: hidden;
-      transition: height 0.3s ease;
-    }
-  
-    .nav-links.active {
-      height: 200px; /* Adjust based on the number of links */
-    }
-  
-    .nav-links li {
-      padding: 1rem 0;
-    }
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block;
   }
-  
+
+  .nav-links {
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #fff;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s ease;
+  }
+
+  .nav-links.active {
+    height: auto; /* Adjust height to fit the content */
+  }
+
+  .nav-links li {
+    padding: 1rem 0;
+  }
+}
