--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Livvic:wght@400;700&display=swap');
+
 
 .navbar {
     display: flex;
@@ -16,6 +18,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     cursor: pointer;
+    font-family: 'Livvic', sans-serif;
   }
   
   /* Menu icon */
