--- a/src/component/home/our_menu/our_menu.css
+++ b/src/component/home/our_menu/our_menu.css
@@ -71,6 +71,7 @@
     font-size: 1.2rem;
     color: #d4af37; /* Gold */
     font-weight: bold;
+    margin-top: 0.3rem;
 }
 
 /* Responsive Design */
