--- a/src/component/home/chief_recommend/chief_recommend.css
+++ b/src/component/home/chief_recommend/chief_recommend.css
@@ -37,6 +37,7 @@
   .view-menu-button {
     font-size: 1rem;
     padding: 0.8rem 2rem;
+    margin-top: 30px;
     background-color: transparent;
     border-radius: 10px; 
     color: #f5a623;
