--- a/src/component/reserve_table/feedback/feedback.css
+++ b/src/component/reserve_table/feedback/feedback.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     min-height: 130vh;
-    background-color: #f9fafb;
+    background-color: #000000;
     padding: 1rem;
    
   }
