--- a/src/component/home/CardSlider/CardSlider.css
+++ b/src/component/home/CardSlider/CardSlider.css
@@ -1,11 +1,14 @@
 .card_slider-body {
     margin: 0 auto;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Livvic', sans-serif;
     box-sizing: border-box;
     width: 90%;
     color: rgb(52, 48, 48);
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Livvic:wght@400;700&display=swap');
+
 
 .card_slider-content {
     text-align: center;
@@ -23,6 +26,7 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
 
 .card_slider-img-body {
@@ -34,24 +38,29 @@
 
 .card_slider-text {
     position: absolute;
-    bottom: 10px;
-    left: 10px;
+    bottom: 20%;
+    left: 50%;
+    transform: translate(-50%, 50%);
     color: white;
-    background-color: rgba(0, 0, 0, 0);
-    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.267); 
+    padding: 5px 10px;
     border-radius: 5px;
     text-align: center;
+    width: 80%;
     
 }
 
 .card_slider-name {
+    
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 2px;
 }
 
 .card_slider-price {
     font-size: 14px;
     font-weight: normal;
+    margin-top: 0;
 }
 
 
@@ -72,8 +81,8 @@
     cursor: pointer;
     width: 50px;
     height: 50px;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-    border-radius: 50%; /* Makes it circular */
+    background-color: rgba(0, 0, 0, 0.5); 
+    border-radius: 50%; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,7 +101,7 @@
 }
 
 .next-arrow svg, .prev-arrow svg {
-    fill: rgb(8, 8, 8); /* Ensures the arrows are visible */
+    fill: rgb(8, 8, 8); 
     width: 24px;
     height: 24px;
 }
@@ -115,6 +124,8 @@
     height: 60px;
     object-fit: cover;
 }
+
+
 
 .card_slider-active {
     border: 2px solid red;
