--- a/src/component/reserve_table/reserve_form/reserve_form.css
+++ b/src/component/reserve_table/reserve_form/reserve_form.css
@@ -68,3 +68,16 @@
         flex-direction: column;
     }
 }
+
+
+.dateIprow{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;  
+    align-items: stretch;
+}
+
+.dateIprow .MuiFormControl-root {
+    flex: 1; /* Ensures equal width */
+    min-width: 150px; /* Adjust as needed */
+}
